@@ -687,6 +687,18 @@ a build configuration tool for the ROME embedded operating system.
 editing crontab files.
 </ul>
 
+<ul>
+<li><a href="http://bookbase.sourceforge.net/index.html">BookBase</a> -
+a MySQL database application for book collectors.
+</ul>
+
+<ul>
+<li><a href="http://perso.club-internet.fr/burnos/gnomezine/">GnomeZine</a> -
+a database manager for magazines articles, currently using MySQL.
+</ul>
+
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
