@@ -1,3 +1,7 @@
+2002-01-07  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added BookBase and GnomeZine.
+
 2001-12-13  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added GCronTime.
